salesforce/force-app/main/default/objects/Land_Registry_Check__c/Land_Registry_Check__c.object-meta.xml
<CustomObject>
    <description>Individual Land Registry compliance check record for a landlord/property combination</description>
    <label>Land Registry Check</label>
    <nameField>
        <displayFormat>LRC-{0000}</displayFormat>
        <label>Check Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Land Registry Checks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>