salesforce/force-app/main/default/objects/Land_Registry_Check__c/fields/Batch__c.field-meta.xml
<CustomField>
    <fullName>Batch__c</fullName>
    <description>Parent batch this check belongs to</description>
    <label>Batch</label>
    <referenceTo>Land_Registry_Batch__c</referenceTo>
    <relationshipLabel>Land Registry Checks</relationshipLabel>
    <relationshipName>Land_Registry_Checks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>