salesforce/force-app/main/default/objects/Land_Registry_Check__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <description>Company name for company landlords</description>
    <label>Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>