salesforce/force-app/main/default/objects/Land_Registry_Check__c/fields/Forename__c.field-meta.xml
<CustomField>
    <fullName>Forename__c</fullName>
    <description>Parsed first name for individual landlords</description>
    <label>Forename</label>
    <length>100</length>
    <type>Text</type>
</CustomField>