salesforce/force-app/main/default/objects/Land_Registry_Check__c/fields/HMLR_Response_Date__c.field-meta.xml
<CustomField>
    <fullName>HMLR_Response_Date__c</fullName>
    <description>When the HMLR response was received</description>
    <label>HMLR Response Date</label>
    <type>DateTime</type>
</CustomField>