salesforce/force-app/main/default/objects/Land_Registry_Check__c/fields/Landlord_Email__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Email__c</fullName>
    <description>Email address of the landlord</description>
    <label>Landlord Email</label>
    <type>Email</type>
</CustomField>