salesforce/force-app/main/default/objects/Land_Registry_Check__c/fields/Landlord_ID__c.field-meta.xml
<CustomField>
    <fullName>Landlord_ID__c</fullName>
    <description>V+ Landlord ID (CustomerRef for HMLR)</description>
    <externalId>true</externalId>
    <label>Landlord ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>