salesforce/force-app/main/default/objects/Land_Registry_Check__c/fields/Landlord_Name__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Name__c</fullName>
    <description>Full landlord name from V+ CSV</description>
    <label>Landlord Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>