salesforce/force-app/main/default/objects/Land_Registry_Check__c/fields/Landlord_Phone__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Phone__c</fullName>
    <description>Phone number of the landlord</description>
    <label>Landlord Phone</label>
    <type>Phone</type>
</CustomField>