salesforce/force-app/main/default/objects/Land_Registry_Check__c/fields/Landlord_Type__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Type__c</fullName>
    <description>Whether landlord is an individual or company</description>
    <label>Landlord Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Company</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>