salesforce/force-app/main/default/objects/Land_Registry_Check__c/fields/Match_Type__c.field-meta.xml
<CustomField>
    <fullName>Match_Type__c</fullName>
    <description>Type of match from HMLR response</description>
    <label>Match Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Property and Person Match</fullName>
            </value>
            <value>
                <fullName>Property Only</fullName>
            </value>
            <value>
                <fullName>No Property Match</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>