salesforce/force-app/main/default/objects/Land_Registry_Check__c/fields/Needs_Letter__c.field-meta.xml
<CustomField>
    <fullName>Needs_Letter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flagged for compliance letter to landlord</description>
    <label>Needs Letter</label>
    <type>Checkbox</type>
</CustomField>