salesforce/force-app/main/default/objects/Land_Registry_Check__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Review notes from compliance officer</description>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>