salesforce/force-app/main/default/objects/Land_Registry_Check__c/fields/Property_Address__c.field-meta.xml
<CustomField>
    <fullName>Property_Address__c</fullName>
    <description>Full property address from V+ CSV</description>
    <label>Property Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>