salesforce/force-app/main/default/objects/Land_Registry_Check__c/fields/Property_Postcode__c.field-meta.xml
<CustomField>
    <fullName>Property_Postcode__c</fullName>
    <description>Property postcode</description>
    <label>Property Postcode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>