salesforce/force-app/main/default/objects/Land_Registry_Check__c/fields/Reviewed_By__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who reviewed this check</description>
    <label>Reviewed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Land_Registry_Checks_Reviewed</relationshipName>
    <type>Lookup</type>
</CustomField>