salesforce/force-app/main/default/objects/Land_Registry_Check__c/fields/Reviewed_Date__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_Date__c</fullName>
    <description>When this check was reviewed</description>
    <label>Reviewed Date</label>
    <type>DateTime</type>
</CustomField>