salesforce/force-app/main/default/objects/Land_Registry_Check__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Current status of this check</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Submitted to HMLR</fullName>
            </value>
            <value>
                <fullName>Matched</fullName>
            </value>
            <value>
                <fullName>No Match</fullName>
            </value>
            <value>
                <fullName>Under Review</fullName>
            </value>
            <value>
                <fullName>Letter Sent</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>