salesforce/force-app/main/default/objects/Land_Registry_Check__c/fields/Surname__c.field-meta.xml
<CustomField>
    <fullName>Surname__c</fullName>
    <description>Parsed surname for individual landlords</description>
    <label>Surname</label>
    <length>100</length>
    <type>Text</type>
</CustomField>