salesforce/force-app/main/default/objects/Land_Registry_Check__c/fields/Title_Deed_Proprietor_Name__c.field-meta.xml
<CustomField>
    <fullName>Title_Deed_Proprietor_Name__c</fullName>
    <description>Proprietor name extracted from the HMLR title deed PDF (Section B: Proprietorship Register)</description>
    <label>Title Deed Proprietor Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>