salesforce/force-app/main/default/objects/Land_Registry_Check__c/fields/Title_Deed_URL__c.field-meta.xml
<CustomField>
    <fullName>Title_Deed_URL__c</fullName>
    <description>Link to title deed PDF in Azure Blob Storage</description>
    <label>Title Deed URL</label>
    <type>Url</type>
</CustomField>