salesforce/force-app/main/default/objects/Land_Registry_Check__c/fields/Title_Number__c.field-meta.xml
<CustomField>
    <fullName>Title_Number__c</fullName>
    <description>Land Registry title number returned from HMLR</description>
    <label>Title Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>