salesforce/force-app/main/default/objects/Land_Registry_Check__c/listViews/All_Checks.listView-meta.xml
<ListView>
    <fullName>All_Checks</fullName>
    <columns>NAME</columns>
    <columns>Batch__c</columns>
    <columns>Landlord_Name__c</columns>
    <columns>Landlord_Type__c</columns>
    <columns>Property_Postcode__c</columns>
    <columns>Status__c</columns>
    <columns>Match_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Checks</label>
</ListView>