salesforce/force-app/main/default/objects/Land_Registry_Check__c/listViews/Needs_Letter.listView-meta.xml
<ListView>
    <fullName>Needs_Letter</fullName>
    <columns>NAME</columns>
    <columns>Batch__c</columns>
    <columns>Landlord_Name__c</columns>
    <columns>Property_Address__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Needs_Letter__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Needs Letter</label>
</ListView>