salesforce/force-app/main/default/objects/Land_Registry_Check__c/listViews/No_Match.listView-meta.xml
<ListView>
    <fullName>No_Match</fullName>
    <columns>NAME</columns>
    <columns>Batch__c</columns>
    <columns>Landlord_Name__c</columns>
    <columns>Property_Address__c</columns>
    <columns>Property_Postcode__c</columns>
    <columns>Needs_Letter__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>No Match</value>
    </filters>
    <label>No Match</label>
</ListView>