salesforce/force-app/main/default/objects/Land_Registry_Check__c/listViews/Pending_Review.listView-meta.xml
<ListView>
    <fullName>Pending_Review</fullName>
    <columns>NAME</columns>
    <columns>Batch__c</columns>
    <columns>Landlord_Name__c</columns>
    <columns>Property_Address__c</columns>
    <columns>Title_Number__c</columns>
    <columns>Title_Deed_URL__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Under Review</value>
    </filters>
    <label>Pending Review</label>
</ListView>